# s3-nix-channel

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  renovate.json
nix/: module.nix  test-flake.nix  tests.nix
src/: error.rs  lib.rs  main.rs  persistent.rs  persistent_config.rs  s3.rs
