[package]
name = "tarball-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
axum = { version = "0.8.1", default-features = false, features = ["http1", "macros", "tokio", "tracing"] }
clap = { version = "4.5.33", default-features = false, features = ["derive", "help", "std", "usage"] }
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
