[package]
name = "tarball-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
arc-swap = "1.7.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
axum = { version = "0.8.1", default-features = false, features = ["http1", "macros", "tokio", "tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.33", default-features = false, features = ["derive", "help", "std", "usage"] }
jsonwebtoken = { version = "9.3.1", default-features = false, features = ["use_pem"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
