[package]
authors = ["Cyberus Technology GmbH"]
name = "s3-nix-channel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "s3-nix-channel"

[[bin]]
name = "s3-nix-channel-upload"

[dependencies]
anyhow = "1.0.97"
arc-swap = "1.7.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest", "default-https-client", "rt-tokio"], default-features = false }
aws-sdk-s3 = "1.79.0"
axum = { version = "0.8.1", default-features = false, features = ["http1", "macros", "tokio", "tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.33", default-features = false, features = ["derive", "help", "std", "usage"] }
jsonwebtoken = { version = "10.0.0", default-features = false, features = ["use_pem"] }
sd-notify = { version = "0.4.5", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "tracing"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
